[✨Feat]: 수량 컨트롤
- 상품의 수량을 선택할 수 있는 기능 구현

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -150,7 +150,7 @@
                   </div> -->
                 </dl>
               </div>
-              <div class="info_flex">
+              <div class="info_flex font-semibold">
                 <p class="min-w-32">상품선택</p>
                 <div
                   class="p-3 border border-gray-200 w-432pxr product_select_name"
@@ -166,7 +166,7 @@
                           class="cursor-pointer quantity_decrease"
                         />
                       </button>
-                      <span class="product_quantity">1</span>
+                      <span class="product_quantity w-3 text-center">1</span>
                       <button>
                         <img
                           src="/public/input/plus.svg"
