[✨Feat]: 수량 1이하 비활성화
수량이 1 초과면 감소 버튼이 활성화버튼으로 바뀌고,
수량이 1 이하면 감소 버튼이 비활성화

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -162,7 +162,7 @@
                       <button>
                         <img
                           src="/public/input/minus-disabled.svg"
-                          alt="수량 감소"
+                          alt="수량 감소 비활성화"
                           class="cursor-pointer quantity_decrease"
                         />
                       </button>
