[✨Feat]: addCart.js 모달 open, close 기능 구현
addCart.js
- 모달 open, close 기능 구현

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -42,6 +42,7 @@
   </head>
   <body>
     <header id="header"></header>
+    <div id="addCart"></div>
     <!-- cart page -->
     <main class="cart_page">
       <section class="cart w1050 pb-80pxr">
@@ -507,7 +508,7 @@
           <!-- cart_side_area -->
           <!-- member -->
           <aside class="cart_side_area w-284pxr pt-14">
-            <div class="sticky flex flex-col gap-4 cart_side top-[-60px]">
+            <div class="sticky z-[-1] flex flex-col gap-4 cart_side top-[-60px]">
               <section class="border border-gray-100 border-solid">
                 <h3 class="sr-only">결제 정보</h3>
                 <article class="pb-5 delivery_info pt-23pxr px-19pxr">
