[✨Feat]: localStorage에 하트 상태 표시
- 상태에 따라 찜하기가 true, false됩니다.
- 로그인, 비로그인과 관계없이 local에 저장되는 상태
  - 추후에 로그인, 비로그인도 나눌 예정입니다.

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -208,10 +208,13 @@
             <div class="flex items-start gap-3">
               <button class="wish_list" data-wish="false">
                 <svg
-                  class="text-gray-100 cursor-pointer icon_heart icon_box_gray h-14 w-14"
+                  class="text-primary cursor-pointer icon_box_gray h-14 w-14"
                   aria-hidden="true"
                 >
-                  <use href="/public/icon/_sprite.svg#Heart"></use>
+                  <use
+                    href="/public/icon/_sprite.svg#Heart"
+                    class="icon_heart"
+                  ></use>
                 </svg>
                 <span class="sr-only">찜하기</span>
               </button>
