[✨Feat]: cart.js cart list 전체선택 기능 구현
cart.js
- cart list 전체선택 기능 구현

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -38,7 +38,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <script type="module" src="../../js/include.js"></script>
-    <!-- <script src="../../components/header/header.js"></script> -->
+    <script type="module" src="./cart.js"></script>
   </head>
   <body>
     <header id="header"></header>
@@ -115,6 +115,7 @@
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
+                          name="cartList"
                           id="itemSelect"
                           class="input_checkbox_nonlabel peer top-[-17px]"
                         />
@@ -181,6 +182,7 @@
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
+                          name="cartList"
                           id="itemSelect2"
                           class="input_checkbox_nonlabel peer top-[-17px]"
                         />
@@ -281,6 +283,7 @@
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
+                          name="cartList"
                           id="itemSelect3"
                           class="input_checkbox_nonlabel peer top-[-17px]"
                         />
@@ -381,6 +384,7 @@
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
+                          name="cartList"
                           id="itemSelect4"
                           class="input_checkbox_nonlabel peer top-[-17px]"
                         />
