--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <header id="header"></header>
-    <div id="addCart"></div>
+    <!-- <div id="addCart"></div> -->
     <!-- cart page -->
     <main class="cart_page">
       <section class="cart w1050 pb-80pxr">
