--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
     <title>잔디 - 잔디마켓</title>
-
     <meta
       name="description"
       content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
@@ -17,7 +15,6 @@
       content="다이어트, 식단, 닭가슴살, 요리, 치아바타, 레시피, 상차림, 다이어트음식, 이유식, 건강이유식, 뷰티, 화장품"
     />
     <meta name="author" content="F4" />
-
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="잔디 - 잔디마켓/뷰티잔디" />
     <meta property="og:title" content="잔디 - 잔디마켓/뷰티잔디" />
@@ -25,7 +22,6 @@
       property="og:description"
       content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
     />
-
     <!-- <meta property="og:image" content="이미지 URL" /> -->
     <!-- <meta property="og:url" content="웹페이지 URL" /> -->
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
@@ -145,7 +141,6 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
@@ -171,7 +166,6 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
@@ -197,7 +191,6 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
@@ -223,7 +216,6 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
@@ -249,7 +241,6 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
@@ -275,7 +266,6 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
@@ -301,12 +291,83 @@
                 <span class="m-0 font-semibold text-16pxr">45,000원</span>
               </div>
             </li>
-
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
+              </a>
+              <button class="mt-6pxr" type="button">
+                <img src="/banner/add cart button.png" alt="" />
+              </button>
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
+                맛없고 비싸기만한 쫄면
+              </h3>
+              <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
+                >90,000원</span
+              >
+              <div>
+                <span class="m-0 font-bold text-orange-600 text-16pxr"
+                  >50%</span
+                >
+                <span class="m-0 font-semibold text-16pxr">45,000원</span>
+              </div>
+            </li> -->
+          </ul>
+          <!-- If we need pagination -->
+          <div class="swiper2-pagination"></div>
+        </div>
+        <!-- If we need navigation buttons -->
+      </section>
+      <div class="relative">
+        <div
+          class="absolute z-10 bottom-330pxr right-495pxr swiper2-button-prev"
+        >
+          <svg role="image" width="60" height="60" viewBox="0 0 52 52">
+            <use href="/icon/_sprite.svg#Arrow_slide" />
+          </svg>
+        </div>
+
+        <div
+          class="absolute z-10 bottom-330pxr left-480pxr swiper2-button-next"
+        >
+          <svg
+            class="rotate-180"
+            role="image"
+            width="60"
+            height="60"
+            viewBox="0 0 52 52"
+          >
+            <use href="/icon/_sprite.svg#Arrow_slide" />
+          </svg>
+        </div>
+      </div>
+
+      <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
+        <img src="/banner/line-banner 1.png" alt="" />
+      </a>
+
+      <!-- product slide 2번째 -->
+      <section
+        class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content overflow-hidden"
+      >
+        <div
+          class="flex flex-col justify-center items-center w-[1042px] h-563pxr p-4pxr"
+        >
+          <h2 class="text-[28.43px] font-bold">놓치면 후회할 가격</h2>
+        </div>
+        <div class="swiper3 w-[1050px] h-516pxr">
+          <ul
+            class="cheap_product_list flex items-start justify-between w-full list-none swiper-wrapper"
+          >
+            <!-- <li
+              class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
+            >
+              <a href="/src/pages/productDetail/">
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
                 <img src="/banner/add cart button.png" alt="" />
@@ -511,22 +572,33 @@
             </li> -->
           </ul>
           <!-- If we need pagination -->
-          <div class="swiper2-pagination"></div>
-
-          <!-- If we need navigation buttons -->
-          <div class="relative">
-            <div
-              class="absolute z-10 top-[-370px] left-[-30px] swiper2-button-prev"
-            >
-              <svg role="button" width="60" height="60" viewBox="0 0 52 52">
-                <use href="./public/icon/_sprite.svg#Arrow_slide" />
-              </svg>
-            </div>
-
-            <div class="absolute swiper2-button-next"></div>
-          </div>
+          <div class="swiper3-pagination"></div>
         </div>
+        <!-- If we need navigation buttons -->
       </section>
+      <div class="relative">
+        <div
+          class="absolute z-10 bottom-330pxr right-495pxr swiper3-button-prev"
+        >
+          <svg role="image" width="60" height="60" viewBox="0 0 52 52">
+            <use href="/icon/_sprite.svg#Arrow_slide" />
+          </svg>
+        </div>
+
+        <div
+          class="absolute z-10 bottom-330pxr left-480pxr swiper3-button-next"
+        >
+          <svg
+            class="rotate-180"
+            role="image"
+            width="60"
+            height="60"
+            viewBox="0 0 52 52"
+          >
+            <use href="/icon/_sprite.svg#Arrow_slide" />
+          </svg>
+        </div>
+      </div>
 
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
         <img src="/banner/line-banner 1.png" alt="" />
