--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="swiper2 w-[1050px] h-516pxr">
           <ul
-            class="recommended_product_list flex items-start justify-between w-full list-none swiper-wrapper"
+            class="flex items-start justify-between w-full list-none recommended_product_list swiper-wrapper"
           >
             <!-- <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
@@ -361,7 +361,7 @@
         </div>
         <div class="swiper3 w-[1050px] h-516pxr">
           <ul
-            class="cheap_product_list flex items-start justify-between w-full list-none swiper-wrapper"
+            class="flex items-start justify-between w-full list-none cheap_product_list swiper-wrapper"
           >
             <!-- <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
@@ -599,10 +599,6 @@
           </svg>
         </div>
       </div>
-
-      <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
-        <img src="/banner/line-banner 1.png" alt="" />
-      </a>
     </main>
     <footer id="footer"></footer>
   </body>
