[✨Feat]: 장바구니 진행중
- 상품 합치기 성공
- 다른상품 분리하기 실패
현재 진행중

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -228,7 +228,7 @@
                 <span class="sr-only">재입고 알림 신청</span>
               </button>
               <button
-                class="font-semibold button_normal h-54pxr w-424pxr text-label-medium"
+                class="cart_button font-semibold button_normal h-54pxr w-424pxr text-label-medium"
               >
                 장바구니 담기
               </button>
